force-app/main/default/objects/Booking_Status__c/Booking_Status__c.object-meta.xml
<CustomObject>
    <label>Booking Status</label>
    <nameField>
        <displayFormat>{YYYY}{MM}-{0000000000}</displayFormat>
        <label>Booking Status Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bookings Status</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>