force-app/main/default/objects/Booking_Status__c/fields/Api_Key__c.field-meta.xml
<CustomField>
    <fullName>Api_Key__c</fullName>
    <label>Api Key</label>
    <length>15</length>
    <type>Text</type>
</CustomField>