force-app/main/default/objects/Booking_Status__c/fields/Booking_FK__c.field-meta.xml
<CustomField>
    <fullName>Booking_FK__c</fullName>
    <label>Booking FK</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Bookings Status</relationshipLabel>
    <relationshipName>Bookings_Status</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>