force-app/main/default/objects/Booking_Status__c/fields/E_Num_Channel__c.field-meta.xml
<CustomField>
    <fullName>E_Num_Channel__c</fullName>
    <label>E Num Channel</label>
    <length>15</length>
    <type>Text</type>
</CustomField>