force-app/main/default/objects/Booking_Status__c/fields/Enum_a_Sync_Action__c.field-meta.xml
<CustomField>
    <fullName>Enum_a_Sync_Action__c</fullName>
    <label>Enum a Sync Action</label>
    <length>25</length>
    <type>Text</type>
</CustomField>