force-app/main/default/objects/Booking_Status__c/fields/Enum_A_Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>Enum_A_Sync_Status__c</fullName>
    <label>Enum A Sync Status</label>
    <length>15</length>
    <type>Text</type>
</CustomField>