force-app/main/default/objects/Booking_Status__c/fields/ENUMFROMBOOKINGSTATUS__c.field-meta.xml
<CustomField>
    <fullName>ENUMFROMBOOKINGSTATUS__c</fullName>
    <label>ENUMFROMBOOKINGSTATUS</label>
    <length>40</length>
    <type>Text</type>
</CustomField>