force-app/main/default/objects/Booking_Status__c/fields/ENUMSTATUS__c.field-meta.xml
<CustomField>
    <fullName>ENUMSTATUS__c</fullName>
    <label>ENUMSTATUS</label>
    <length>40</length>
    <type>Text</type>
</CustomField>