force-app/main/default/objects/Booking_Status__c/fields/From_Hotelus_Module__c.field-meta.xml
<CustomField>
    <fullName>From_Hotelus_Module__c</fullName>
    <label>From Hotel US Module</label>
    <length>15</length>
    <type>Text</type>
</CustomField>