force-app/main/default/objects/Booking_Status__c/fields/Insert_Times_Tamp__c.field-meta.xml
<CustomField>
    <fullName>Insert_Times_Tamp__c</fullName>
    <label>Insert Time Stamp</label>
    <length>15</length>
    <type>Text</type>
</CustomField>