force-app/main/default/objects/Booking_Status__c/fields/IP_Source__c.field-meta.xml
<CustomField>
    <fullName>IP_Source__c</fullName>
    <label>IP Source</label>
    <length>15</length>
    <type>Text</type>
</CustomField>