force-app/main/default/objects/Booking_Status__c/fields/PMS_User__c.field-meta.xml
<CustomField>
    <fullName>PMS_User__c</fullName>
    <label>PMS User</label>
    <length>15</length>
    <type>Text</type>
</CustomField>