force-app/main/default/objects/Booking_Status__c/fields/Send_Time_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Send_Time_Stamp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Time Stamp</label>
    <type>Checkbox</type>
</CustomField>