force-app/main/default/objects/Booking_Status__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Booking_FK__c</columns>
    <columns>Status_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>